[package]
name = "command_data_derive"
version = "0.1.0"
authors = ["Andrew-Schwartz <andrewschwartz59@gmail.com>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
proc-macro2 = "1.0.26"
proc-macro-error = "1.0.4"
paste = "1.0.5"
doc-comment = "0.3.3"

[dependencies.syn]
version = "1.0.70"
# todo remove "extra-traits" when releasing
features = ["extra-traits", "full"]
