[package]
name = "derive_test"
version = "0.1.0"
authors = ["Andrew-Schwartz <andrewschwartz59@gmail.com>"]
edition = "2018"

[dependencies]
discorsd = { path = "../discorsd" }
command_data_derive = { path = "../command_data_derive" }
serde_json = "1.0.64"
tokio = { version = "1.5.0", features = ["full"] }
chrono = "0.4.19"