[package]
name = "discorsd"
version = "0.1.0"
authors = ["Andrew-Schwartz <andrewschwartz59@gmail.com>"]
edition = "2021"

[dependencies]
command_data_derive = { path = "../command_data_derive" }
itertools = "0.10.0"
anyhow = "1.0.40"
bitflags = "1.2.1"
async-trait = "0.1.50"
base64 = "0.13.0"
rand = "0.8.3"
num_enum = "0.5.1"
log = "0.4.14"
env_logger = "0.9.1"
once_cell = "1.7.2"
regex = "1.4.6"
thiserror = "1.0.24"
dyn-clone = "1.0.4"
downcast-rs = "1.2.0"
array-init = "2.0.0"
futures = "0.3.14"

[dependencies.tokio]
version = "1.5.0"
features = ["full"]

[dependencies.async-tungstenite]
default-features = false
features = ["tokio-runtime", "tokio-native-tls"]
version = "0.17.2"

[dependencies.reqwest]
version = "0.11.12"
features = ["json", "stream", "multipart"]

[dependencies.serde]
version = "1.0.125"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.64"
features = ["raw_value"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.backoff]
version = "0.4.0"
features = ["tokio"]
