[package]
name = "discorsd"
version = "0.1.0"
authors = ["Andrew-Schwartz <andrewschwartz59@gmail.com>"]
edition = "2021"

[dependencies]
command_data_derive = { path = "../command_data_derive" }
itertools = "0.11.0"
bitflags = "2.3.3"
async-trait = "0.1.72"
base64 = "0.21.2"
rand = "0.8.5"
num_enum = "0.6.1"
log = "0.4.19"
env_logger = "0.10.0"
# once lazy gets stabilized, can remove this
once_cell = "1.18.0"
regex = "1.9.1"
thiserror = "1.0.44"
dyn-clone = "1.0.12"
downcast-rs = "1.2.0"
futures = "0.3.28"
serde = "1.0.176"
serde_derive = "1.0.176"

[dependencies.tokio]
version = "1.29.1"
features = ["full"]

[dependencies.async-tungstenite]
default-features = false
features = ["tokio-runtime", "tokio-native-tls"]
version = "0.22.2"

[dependencies.reqwest]
version = "0.11.18"
features = ["json", "stream", "multipart"]

[dependencies.serde_json]
version = "1.0.104"
features = ["raw_value"]

[dependencies.chrono]
version = "0.4.28"
features = ["serde"]

[dependencies.backoff]
version = "0.4.0"
features = ["tokio"]
